Fix extra padding below Jetpack banner

--- a/client/login/wp-login/style.scss
+++ b/client/login/wp-login/style.scss
@@ -45,4 +45,9 @@
 		left: 0;
 	text-align: center;
 	width: 100%;
+
+	img {
+		display: block;
+		margin: 0 auto;
+	}
 }
